--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,10 +17,10 @@
 }
 #info-box {
     position: absolute;
-    top: 10px;  /* Yerleşim konumunu ayarlayın */
-    right: 10px; /* Sağ üst köşe için */
-    z-index: 1000; /* Harita katmanlarından üstte olmalı */ /* Yarı saydam arka plan */
-    padding: 5px; /* İç boşluk */
+    top: 10px;  
+    right: 10px;
+    z-index: 1000; 
+    padding: 12px; /* İç boşluk */
     border-radius: 5px; /* Kenar yuvarlaklığı */
     display: flex;
     align-items: center;
@@ -33,13 +33,14 @@
     left: 90%;
     top: 10%;
     transform: translate(-50%, 0); /* Yatay merkezleme */
+    font-family: "Montserrat", serif;
     background: white;
-    border: 1px solid #ccc;
-    padding: 10px;
-    border-radius: 5px;
+    border: 1px solid #343434;
+    padding: 15px;
+    border-radius: 9px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     z-index: 9999;
-}
+    transition: all 0.5s ease;}
 
 
 
